file check and scm info

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,16 @@
 	<artifactId>daemon-maven-plugin</artifactId>
 	<version>0.1-SNAPSHOT</version>
 	<name>Maven plugin for daemon framework</name>
+	<inceptionYear>2015</inceptionYear>
+	<scm>
+		<connection>scm:git:git@github.com:taimos/daemon-maven-plugin.git</connection>
+		<developerConnection>scm:git:git@github.com:taimos/daemon-maven-plugin.git</developerConnection>
+		<url>scm:git:git@github.com:taimos/daemon-maven-plugin.git</url>
+	</scm>
+	<issueManagement>
+		<system>github</system>
+		<url>https://github.com/taimos/daemon-maven-plugin/issues</url>
+	</issueManagement>
 	<build>
 		<finalName>daemon-maven-plugin</finalName>
 		<plugins>
